# macos-sandbox-coverage

./: .gitignore  .gitmodules  Makefile  README.md  gather_all.py  gather_logs.py  match_normalised.py  match_rules.cpp  normalise_profiles.py  process_and_match.py  process_logs.py  report.py  reprocess_inconsistent.py  requirements.txt  sandbox_coverage.py  sandbox_coverage_driver.py
coverage_results/: generic_profile.json
data/: README.md  example_report.htm  generic_profile.json  generic_profile.sb  process_final_matches.py
data/com.generic.container/: Container.plist
data/generic_profiles/: 10.14.6-18G4032.json  10.14.6-18G4032.plist  10.14.6-18G4032.sb  10.15.3-19D76.json  10.15.4-19E287.plist  10.15.4-19E287.sb
data/iomap/: 10.14.6-18G4032.json  10.15.4-19E287.json
data/templates/: report.htm  report_profile.htm  report_tabular.htm
matching-core/: CMakeLists.txt  Makefile  Makefile.matcher  Makefile.rematcher  match_rules.cpp  matcher.cpp  rematch_inconsistent.cpp  ruleset_helpers.cpp  ruleset_helpers.h  sbpl_helpers.cpp  sbpl_helpers.h
matching-core/sandbox_utils/: CMakeLists.txt  Makefile  decision.h  file.c  file.h  iokit.c  iokit.h  iomap.py  mach.c  mach.h  nvram.c  nvram.h  posix_sem.c  posix_sem.h  posix_shm.c  posix_shm.h  process_info.c  process_info.h  sandbox_utils.c  sandbox_utils.h  signal.c  signal.h
matching-core/sandbox_utils/tests/: CMakeLists.txt  extension_test.c  iokit_test.c  nvram_test.c  posix_sem_test.c  posix_shm_test.c  process_info_test.c  signal_test.c
rematcher/: Makefile  rematch_inconsistent.cpp  ruleset_helpers.cpp  ruleset_helpers.h  sbpl_helpers.cpp  sbpl_helpers.h
sandbox_utils/: Makefile  apple_sandbox.h  file.c  file.h  iokit.c  iokit.h  mach.h  misc.h  nvram.h  posix_sem.c  posix_sem.h  posix_shm.c  posix_shm.h  process_info.c  process_info.h  sandbox_utils.c  sandbox_utils.dylib  sandbox_utils.h  signal.c  signal.h
sandbox_utils/tests/: extension_test.c  iokit_test.c  nvram_test.c  posix_sem_test.c  posix_shm_test.c
sblogs/: gather.py  match.py  process.py
sbprofiles/: generalise.py  normalise.py  normalise_profiles.py
